add LoginOrRegister api
